--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,21 +7,6 @@
     android:background="#A6A4E8"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/background"
-        tools:layout_editor_absoluteX="-30dp"
-        tools:layout_editor_absoluteY="-84dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="250dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
@@ -44,65 +29,81 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/setting_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@android:color/transparent"
-            android:src="@mipmap/option"
+            android:src="@drawable/ic_baseline_brightness_7_40"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.938"
-            app:layout_constraintStart_toEndOf="@+id/my_page_text_view"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.49"
+            android:layout_marginEnd="30dp"
             tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="30dp"
+        android:layout_margin="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_bar">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/profile_image_card_view"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:cardCornerRadius="20dp"
+                android:background="@color/default_super_bright_ui_color"
+                android:layout_margin="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+                <ImageView
+                    android:id="@+id/profile_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:src="@tools:sample/avatars" />
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-    <ImageView
-        android:id="@+id/profile"
-        android:layout_width="99dp"
-        android:layout_height="92dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_01"
-        app:layout_constraintStart_toStartOf="@+id/bg"
-        app:layout_constraintTop_toBottomOf="@+id/top_bar"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="24dp"
-        android:text="Pasta"
-        app:layout_constraintBottom_toTopOf="@+id/phone_text_view"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toTopOf="@+id/bg"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/phone_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="52dp"
-        android:text="010-1345-1235"
-        app:layout_constraintEnd_toEndOf="@+id/bg"
-        app:layout_constraintHorizontal_bias="0.011"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toTopOf="@+id/bg" />
-
-    <TextView
-        android:id="@+id/email_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="28dp"
-        android:text="pasta@gmail.com"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toBottomOf="@+id/phone_text_view" />
-
+                android:text="Pasta"
+                android:fontFamily="@font/rubik_bold"
+                android:textColor="@color/default_dark_ui_color"
+                android:textSize="20dp"
+                android:layout_marginStart="30dp"
+                app:layout_constraintTop_toTopOf="@id/profile_image_card_view"
+                app:layout_constraintStart_toEndOf="@id/profile_image_card_view" />
+            <TextView
+                android:id="@+id/phone_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="010-1345-1235"
+                android:fontFamily="@font/rubik_bold"
+                android:layout_marginStart="30dp"
+                android:textColor="@color/gray_ui_text_color"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
+                app:layout_constraintTop_toBottomOf="@id/name_text_view"
+                app:layout_constraintBottom_toTopOf="@id/email_text_view"/>
+            <TextView
+                android:id="@+id/email_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="pasta@gmail.com"
+                android:textColor="@color/gray_ui_text_color"
+                android:layout_marginStart="30dp"
+                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
+                app:layout_constraintBottom_toBottomOf="@id/profile_image_card_view"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
