--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="example@email.com"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -82,15 +83,17 @@
         android:id="@+id/password_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="password"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/id_edit_text"
         tools:ignore="TouchTargetSizeCheck" />
