--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -24,6 +24,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="000-0000-0000"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="phone"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -54,6 +55,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="성명"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -84,6 +86,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="password"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -146,6 +149,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="example@email.com"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -176,6 +180,7 @@
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
         android:hint="password"
+        android:textColorHint="@color/light_gray_ui_text_color"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/black"
