--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="default_bright_ui_color">#FFCAC8F1</color>
     <color name="default_dark_ui_color">#FF444370</color>
     <color name="gray_ui_text_color">#FF7B7B7B</color>
+    <color name="light_gray_ui_text_color">#B8B8B8</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
