--- a/app/src/main/res/layout/activity_profilefriend.xml
+++ b/app/src/main/res/layout/activity_profilefriend.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#A6A4E8"
-    tools:context=".LoginActivity">
+    tools:context=".FriendProfileActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imagesView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/background"
@@ -115,16 +115,17 @@
         app:srcCompat="@mipmap/backbutton"
         tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileimage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline_01"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:src="@drawable/image1"
+        android:transitionName="image"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
