--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -9,7 +9,7 @@
 
 
     <EditText
-        android:id="@+id/id_search_friend"
+        android:id="@+id/search_friend"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
@@ -45,10 +45,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
         android:layout_marginTop="130dp"
         android:layout_marginBottom="18dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+
+
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/search_friend"
+        app:layout_constraintBottom_toBottomOf="parent"
 
         tools:ignore="MissingConstraints" />
 
