--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/round_gray_rect"
+    android:clickable="true"
+    android:focusable="true"
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -14,6 +16,7 @@
         android:layout_marginStart="15dp"
         android:src="@drawable/image4"
         android:background="@android:color/transparent"
+        android:transitionName="image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
