--- a/app/src/main/res/layout/activity_post_viewer.xml
+++ b/app/src/main/res/layout/activity_post_viewer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +11,8 @@
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#444370">
+        android:background="#444370"
+        app:layout_constraintTop_toTopOf="parent">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,10 +34,21 @@
             app:layout_constraintStart_toStartOf="parent"
             android:background="@drawable/ic_baseline_chevron_left_40"
             android:layout_marginStart="10dp"/>
+        <ImageView
+            android:id="@+id/post_menu"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_baseline_menu_24"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/post_profile"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/top_bar">
         <ImageView
             android:id="@+id/user_image"
             android:layout_width="40dp"
@@ -100,9 +112,11 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/default_harf_ui_color"/>
+        android:background="@color/default_harf_ui_color"
+        app:layout_constraintTop_toBottomOf="@id/post_profile"/>
     <TextView
         android:id="@+id/post_content"
         android:layout_width="match_parent"
@@ -113,11 +127,14 @@
         android:paddingBottom="10dp"
         android:fontFamily="@font/rubik_bold"
         android:textColor="@color/default_dark_ui_color"
-        android:text="임시로 작성된 글 입니다.\n안녕하세요."/>
+        android:text="임시로 작성된 글 입니다.\n안녕하세요."
+        app:layout_constraintTop_toBottomOf="@id/divider"/>
     <View
+        android:id="@+id/divider_second"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/default_harf_ui_color"/>
+        android:background="@color/default_harf_ui_color"
+        app:layout_constraintTop_toBottomOf="@id/post_content"/>
     <TextView
         android:id="@+id/comment_title"
         android:layout_width="match_parent"
@@ -130,15 +147,21 @@
         android:background="@color/default_dark_ui_color"
         android:textColor="@color/default_super_bright_ui_color"
         android:textSize="15sp"
-        android:text="댓글"/>
+        android:text="댓글"
+        app:layout_constraintTop_toBottomOf="@id/divider_second"/>
     <View
+        android:id="@+id/divider_third"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/default_harf_ui_color"/>
+        android:background="@color/default_harf_ui_color"
+        app:layout_constraintTop_toBottomOf="@id/comment_title"/>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/comment_part"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/divider_third">
         <EditText
+            android:id="@+id/comment_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/round_white_rect"
@@ -163,11 +186,16 @@
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <View
+        android:id="@+id/divider_fourth"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/default_harf_ui_color"/>
+        android:background="@color/default_harf_ui_color"
+        app:layout_constraintTop_toBottomOf="@id/comment_part"/>
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comment_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-</LinearLayout>
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/divider_fourth"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
