--- a/app/src/main/res/layout/item_post_recycler_view.xml
+++ b/app/src/main/res/layout/item_post_recycler_view.xml
@@ -51,6 +51,7 @@
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/user_image"/>
         <ImageView
+            android:id="@+id/post_menu"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_baseline_menu_24"
