--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,69 +42,95 @@
             tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="140dp"
+        android:layout_margin="20dp"
         android:elevation="10dp"
         app:cardCornerRadius="30dp"
-        android:layout_margin="20dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_bar">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/profile_image_card_view"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:cardCornerRadius="20dp"
-                android:background="@color/default_super_bright_ui_color"
                 android:layout_margin="20dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:background="@color/default_super_bright_ui_color"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:id="@+id/profile_background"
                     android:layout_width="match_parent"
-                    android:scaleType="center"
                     android:layout_height="match_parent"
+                    android:scaleType="center"
                     tools:src="@tools:sample/avatars" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Pasta"
+                android:layout_marginStart="30dp"
                 android:fontFamily="@font/rubik_bold"
+                android:text="Pasta"
                 android:textColor="@color/default_dark_ui_color"
                 android:textSize="20dp"
-                android:layout_marginStart="30dp"
-                app:layout_constraintTop_toTopOf="@id/profile_image_card_view"
-                app:layout_constraintStart_toEndOf="@id/profile_image_card_view" />
+                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
+                app:layout_constraintTop_toTopOf="@id/profile_image_card_view" />
+
             <TextView
                 android:id="@+id/phone_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="010-1345-1235"
-                android:fontFamily="@font/rubik_bold"
                 android:layout_marginStart="30dp"
+                android:fontFamily="@font/rubik_bold"
+                android:text="010-1345-1235"
                 android:textColor="@color/gray_ui_text_color"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@id/email_text_view"
                 app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
-                app:layout_constraintTop_toBottomOf="@id/name_text_view"
-                app:layout_constraintBottom_toTopOf="@id/email_text_view"/>
+                app:layout_constraintTop_toBottomOf="@id/name_text_view" />
+
             <TextView
                 android:id="@+id/email_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
                 android:text="pasta@gmail.com"
                 android:textColor="@color/gray_ui_text_color"
-                android:layout_marginStart="30dp"
-                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
-                app:layout_constraintBottom_toBottomOf="@id/profile_image_card_view"/>
+                app:layout_constraintBottom_toBottomOf="@id/profile_image_card_view"
+                app:layout_constraintStart_toEndOf="@id/profile_image_card_view" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
+        android:layout_width="413dp"
+        android:layout_height="478dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/post_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/top_bar" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
