--- a/app/src/main/res/layout/activity_post_viewer.xml
+++ b/app/src/main/res/layout/activity_post_viewer.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/top_bar">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -57,7 +57,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_baseline_info_24"/>
+            android:src="@mipmap/default_user_image"/>
         <TextView
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
