--- a/app/src/main/res/layout/activity_profile_friend.xml
+++ b/app/src/main/res/layout/activity_profile_friend.xml
@@ -63,23 +63,13 @@
         app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <ImageView
-        android:id="@+id/chat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:src="@mipmap/chatbutton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/friend_button"/>
-
-    <ImageView
         android:id="@+id/friend_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/chat_button"
         app:layout_constraintEnd_toStartOf="@id/friend_post_Button"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/friend_add_button" />
 
     <ImageView
@@ -112,7 +102,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:src="@drawable/image1"
+        tools:src="@mipmap/default_user_image"
         android:transitionName="image"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
