--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,24 +59,16 @@
             android:layout_height="match_parent"
             android:background="@color/white">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/profile_image_card_view"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="20dp"
-                android:background="@color/default_super_bright_ui_color"
+                android:src="@mipmap/default_user_image"
                 app:cardCornerRadius="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/profile_background"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="center"
-                    tools:src="@tools:sample/avatars" />
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/name_text_view"
@@ -88,8 +80,8 @@
                 android:text="Pasta"
                 android:textColor="@color/default_dark_ui_color"
                 android:textSize="20dp"
-                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
-                app:layout_constraintTop_toTopOf="@id/profile_image_card_view" />
+                app:layout_constraintStart_toEndOf="@id/profile_image"
+                app:layout_constraintTop_toTopOf="@id/profile_image" />
 
             <TextView
                 android:id="@+id/phone_text_view"
@@ -101,7 +93,7 @@
                 android:textColor="@color/gray_ui_text_color"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@id/email_text_view"
-                app:layout_constraintStart_toEndOf="@id/profile_image_card_view"
+                app:layout_constraintStart_toEndOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/name_text_view" />
 
             <TextView
@@ -111,8 +103,8 @@
                 android:layout_marginStart="30dp"
                 android:text="pasta@gmail.com"
                 android:textColor="@color/gray_ui_text_color"
-                app:layout_constraintBottom_toBottomOf="@id/profile_image_card_view"
-                app:layout_constraintStart_toEndOf="@id/profile_image_card_view" />
+                app:layout_constraintBottom_toBottomOf="@id/profile_image"
+                app:layout_constraintStart_toEndOf="@id/profile_image" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
