--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -14,7 +14,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="15dp"
-        android:src="@drawable/image4"
+        android:src="@mipmap/default_user_image"
         android:background="@android:color/transparent"
         android:transitionName="image"
         app:layout_constraintBottom_toBottomOf="parent"
