--- a/app/src/main/res/layout/item_opponent_chat_recycler_view.xml
+++ b/app/src/main/res/layout/item_opponent_chat_recycler_view.xml
@@ -11,11 +11,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         >
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chat_opponent_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/round_white_rect"
+            android:background="@mipmap/default_user_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
