--- a/app/src/main/res/layout/item_post_recycler_view.xml
+++ b/app/src/main/res/layout/item_post_recycler_view.xml
@@ -17,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="40dp">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_baseline_info_24"/>
+            android:src="@mipmap/default_user_image"/>
         <TextView
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
             app:layout_constraintStart_toEndOf="@id/user_image"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/user_image"/>
-        <ImageView
+        <!--<ImageView
             android:id="@+id/post_menu"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -58,7 +58,7 @@
             android:layout_marginEnd="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>-->
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/post_content"
