--- a/app/src/main/res/layout/item_post_recycler_view.xml
+++ b/app/src/main/res/layout/item_post_recycler_view.xml
@@ -50,15 +50,15 @@
             app:layout_constraintStart_toEndOf="@id/user_image"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/user_image"/>
-        <!--<ImageView
+        <ImageView
             android:id="@+id/post_menu"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_baseline_menu_24"
+            android:src="@drawable/ic_baseline_restore_from_trash_40"
             android:layout_marginEnd="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>-->
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/post_content"
