--- a/app/bugiwear/src/main/res/layout/activity_main.xml
+++ b/app/bugiwear/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_boxedEdges="all">
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="30dp"
             app:layout_constraintTop_toTopOf="parent"
             android:text="새글 피드"
@@ -24,10 +24,20 @@
             android:fontFamily="@font/rubik_bold"
             android:background="@drawable/post_feed_padding"
             android:elevation="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/setting_button"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:textAlignment="center"
-            android:textColor="@color/default_dark_ui_color"/>
+            android:textColor="@color/default_dark_ui_color">
+        </TextView>
+        <ImageView
+            android:id="@+id/setting_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/ic_baseline_brightness_high_24" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/post_list"
             android:layout_width="match_parent"
