--- a/app/bugiwear/src/main/res/layout/activity_main.xml
+++ b/app/bugiwear/src/main/res/layout/activity_main.xml
@@ -14,6 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_boxedEdges="all">
+        <ImageView
+            android:id="@+id/refresh_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_360_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/title"/>
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
@@ -24,7 +32,7 @@
             android:fontFamily="@font/rubik_bold"
             android:background="@drawable/post_feed_padding"
             android:elevation="5dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/refresh_button"
             app:layout_constraintEnd_toStartOf="@id/setting_button"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
