--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -31,7 +31,7 @@
         android:layout_height="60dp"
         android:background="#444370"
         android:gravity="center_horizontal|center_vertical"
-        android:text="친구목록"
+        android:text="사용자 목록"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
